index.html modifié

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>Git</title>
 </head>
 <body>
-
+	<header>
+		<nav>
+			<a href="Mon projet Git"></a>
+		</nav>
+	</header>
 </body>
 </html>
